--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+app.baseUrl=http://localhost:8080/
+server.error.include-stacktrace=never
+
+# Extend
+extend.baseUrl=https://api.paywithextend.com
+extend.apiVersion=application/vnd.paywithextend.v2021-03-12+json
+extend.tokenTimeoutMinutes=10
+
+# Redis
+spring.redis.host=
+spring.redis.password=
+spring.redis.port=16856
 
